added readme content

--- a/env/.env.sample
+++ b/env/.env.sample
@@ -1,6 +1,4 @@
-APPLICATION_ENV=test
-LOAD_NEW_RELIC=false
-MONGODB_URI=mongodb://localhost:27017/ikeora
-MONGODB_TEST_URI=mongodb://localhost:27017/test
+NODE_ENV=test
 TEST_URL="http://localhost:3000"
-ENVIRONMENT=development
+TELEGRAM_BOT_TOKEN=myToken
+APPLICATION_ENV=test
