added nodemon and updated verify controller

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "dotenv": "^2.0.0",
+    "nodemailer": "^4.1.0",
     "telegram-node-bot": "^4.0.3"
   },
   "devDependencies": {
